// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PieceMesh > renders black Bishop and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.575,0"
        rotation="0,0,-0.6"
      >
        <meshstandardmaterial
          color="[object Object]"
          metalness="0.08"
          roughness="0.6"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.725,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black King and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.8,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.815,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black Knight and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0.35,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black Pawn and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.43,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black Queen and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.15,0.715,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.10606601717798213,0.715,0.10606601717798211"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="9.184850993605149e-18,0.715,0.15"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.10606601717798211,0.715,0.10606601717798213"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.15,0.715,1.8369701987210297e-17"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.10606601717798216,0.715,-0.10606601717798211"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-2.7554552980815445e-17,0.715,-0.15"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.1060660171779821,0.715,-0.10606601717798216"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.79,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black Rook and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.17,0.585,0"
        rotation="0,0,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.05253288904374107,0.585,0.16167960777017612"
        rotation="0,-1.2566370614359172,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.13753288904374106,0.585,0.09992349288972045"
        rotation="0,-2.5132741228718345,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.13753288904374109,0.585,-0.09992349288972042"
        rotation="0,-3.7699111843077517,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.05253288904374103,0.585,-0.16167960777017612"
        rotation="0,-5.026548245743669,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders black Unicorn and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.67,0"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#413b35"
          emissive="0"
          metalness="0.08"
          roughness="0.35"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Bishop and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.575,0"
        rotation="0,0,-0.6"
      >
        <meshstandardmaterial
          color="[object Object]"
          metalness="0.08"
          roughness="0.6"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.725,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white King and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.8,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.815,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Knight and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,-0.35,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Pawn and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.43,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Queen and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.15,0.715,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.10606601717798213,0.715,0.10606601717798211"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="9.184850993605149e-18,0.715,0.15"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.10606601717798211,0.715,0.10606601717798213"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.15,0.715,1.8369701987210297e-17"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.10606601717798216,0.715,-0.10606601717798211"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-2.7554552980815445e-17,0.715,-0.15"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.1060660171779821,0.715,-0.10606601717798216"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.79,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Rook and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.17,0.585,0"
        rotation="0,0,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.05253288904374107,0.585,0.16167960777017612"
        rotation="0,-1.2566370614359172,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.13753288904374106,0.585,0.09992349288972045"
        rotation="0,-2.5132741228718345,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="-0.13753288904374109,0.585,-0.09992349288972042"
        rotation="0,-3.7699111843077517,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0.05253288904374103,0.585,-0.16167960777017612"
        rotation="0,-5.026548245743669,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;

exports[`PieceMesh > renders white Unicorn and matches snapshot 1`] = `
<div>
  <group
    userdata="[object Object]"
  >
    <group
      position="0,-0.5,0"
      rotation="0,0,0"
    >
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
        position="0,0.67,0"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
      <mesh
        geometry="[object Object]"
      >
        <meshstandardmaterial
          color="#f2ead8"
          emissive="0"
          metalness="0.08"
          roughness="0.45"
        />
      </mesh>
    </group>
  </group>
</div>
`;
